<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="160sp"
        android:layout_height="64sp"
        android:layout_marginTop="64sp"
        android:text="@string/quiz_title"
        android:textSize="32sp"
        android:textColor="@color/purple_700"
        android:shadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="200sp"
        android:layout_height="118sp"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="200sp"
        android:layout_height="52sp"
        android:text="@string/edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />


</androidx.constraintlayout.widget.ConstraintLayout>